--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
@@ -30,13 +30,15 @@
   "devDependencies": {
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.20",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "@vercel/ncc": "^0.34.0",
     "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.4",
     "jest": "^29.0.3",
     "prettier": "2.7.1",
     "ts-jest": "^29.0.2",
-    "typescript": "^4.8.3"
+    "typescript": ">=4.4"
   }
 }
