--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -23,18 +23,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set Node.js 16.x
-        uses: actions/setup-node@v2.5.1
+      - name: Set Node.js latest
+        uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: latest
+
+      - name: Set pnpm latest
+        uses: pnpm/action-setup@v2.2.2
+        with:
+          version: latest
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
 
       - name: Rebuild the dist/ directory
         run: |
-          npm run build
-          npm run package
+          pnpm build
+          pnpm package
 
       - name: Compare the expected and actual dist/ directories
         run: |
