--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "description": "TypeScript template action",
-  "main": "lib/main.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
-    "package": "ncc build --license licenses.txt",
+    "build": "ncc build src/main.ts --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "pnpm format && pnpm lint &&  pnpm test && pnpm build"
   },
   "repository": {
     "type": "git",
