--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on:
 
 jobs:
   build:
+    name: Check source code and emit build artifacts to dist/
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
