--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,10 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/build.yml
-  e2e:
-    needs: build
-    uses: ./.github/workflows/e2e.yml
+
   analyze_source:
     uses: ./.github/workflows/analyze.yml
+
+  e2e:
+    needs: [build, analyze_source]
+    uses: ./.github/workflows/e2e.yml
