--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,6 +3,7 @@ on:
 
 jobs:
   e2e:
+    name: Run action on a real agent
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
