ci: update workflow names

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
     uses: ./.github/workflows/analyze.yml
 
   test:
-    needs: [build, analyze]
+    needs: [prepare, analyze]
     uses: ./.github/workflows/e2e.yml
