ci: enable pnpm cache and extract setup node to a composite action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
     uses: ./.github/workflows/analyze.yml
 
   test:
-    needs: [prepare, analyze]
+    needs: prepare
     uses: ./.github/workflows/e2e.yml
