--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,15 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set Node.js latest
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-
-      - name: Set pnpm latest
-        uses: pnpm/action-setup@v2.2.2
-        with:
-          version: latest
+      - uses: ./github/actions/setup-node
 
       - name: Install dependencies
         run: pnpm install
