--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: ./github/actions/setup-node
+      - uses: ./.github/actions/setup-node
 
       - name: Install dependencies
         run: pnpm install
