ci: test depends on prepare and analyze jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     uses: ./.github/workflows/analyze.yml
 
   test:
-    needs: prepare
+    needs: [prepare, analyze]
     uses: ./.github/workflows/e2e.yml
 
   release:
