--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 2
-      - run: git checkout HEAD^
+      - run: git pull
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
