--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "jest": "^29.0.3",
     "prettier": "2.7.1",
     "ts-jest": "^29.0.2",
-    "typescript": ">=4.4"
+    "typescript": "^4.8.3"
   }
 }
