refactor: rename e2e to validate and run git pull before run the action

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,10 +2,11 @@ on:
   workflow_call:
 
 jobs:
-  e2e:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: git pull
       - uses: ./
         with:
           milliseconds: 1000
